[package]
name = "jacanaoesta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7.0"
url = "2.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
